Add new sections

--- a/css/style.css
+++ b/css/style.css
@@ -1008,3 +1008,13 @@ responsive area
 {
     background-color: lightgray;
 }
+
+.phone-container{
+    display: flex;
+    align-items: center;
+}
+
+.phone-container img {
+    width: 40px;
+    margin-right: 4px;
+}
